# anvaya-platform

./: .gitignore  Agents.md  CHANGELOG.md  LICENSE  README.md  nx.json  package.json
.github/workflows/: ci.yml
apps/studio/: next.config.js  package.json  playwright.config.ts  project.json  tailwind.config.js
apps/studio/e2e/: circuit.spec.ts
apps/studio/src/app/: globals.css  layout.tsx  page.tsx
apps/studio/src/components/: BlochSphere.tsx  LoadingSpinner.tsx  ProbabilityHistogram.tsx  PulseTimeline.tsx
apps/studio/src/components/CircuitCanvas/: CircuitCanvas.tsx  ControlEdge.tsx  GateNode.tsx  GatePalette.tsx
apps/studio/src/hooks/: useCoreReady.ts
apps/studio/src/lib/: anvaya-core.ts  bloch.ts  pulse-types.ts
apps/studio/src/store/: circuitStore.ts
rust/: Cargo.toml
rust/anvaya-core/: Cargo.toml
rust/anvaya-core-wasm/: Cargo.toml
rust/anvaya-core-wasm/src/: lib.rs
rust/anvaya-core/src/: circuit.rs  gate.rs  lib.rs  optimizer.rs  qasm.rs  simulator.rs
rust/anvaya-pulse/: Cargo.toml
rust/anvaya-pulse-wasm/: Cargo.toml
rust/anvaya-pulse-wasm/src/: lib.rs
rust/anvaya-pulse/src/: lib.rs  pulse.rs  scheduler.rs
rust/anvaya-simulator/: Cargo.toml
rust/anvaya-simulator/src/: main.rs  sim.rs
