[package]
name = "anvaya-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
anvaya-core = { path = "../anvaya-core" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
num-complex = "0.4"
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
